--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'T'
 - !lcsh 'Inventions'
+- GITenberg
 tableOfContents: Gutenberg and the printing press -- Palissy and his enamel -- Galileo
   and the telescope -- Watt and the steam-engine -- Arkwright and the spinning-jenny
   -- Whitney and the cotton-gin -- Fulton and the steamboat -- Davy and the safety-lamp
